Add fields for patients profile
